+ Add advanced settings page
+ Ticket #353, Allow to control minimum file duration for remember position feature
+ Ticket #1407/#2425, Add an advanced option to control the number of recent files. Those files are shown
  in the "Recent Files" menu. It is also the files for which a position is potentially saved
+ Ticket #3393, Allow to disable remember position feature for audio files
+ Ticket #4345, Text subtitles: Add a mode that automatically chooses the rendering target based on the
  subtitle type, ASS/SSA subtitles will be rendered on the video frame while other text subtitles will
  be rendered on the full window
* Text subtitles: Faster subtitle parsing (up to 4 times faster for SSA/ASS subtitles)
* Text subtitles: Much faster subtitle opening in the Subresync bar
* Ticket #2834, Increase limit on subtitles override placement feature.
* Ticket #4428, Improve the clarity of the error message when opening a subtitle file fails
! "Load subtitle" dialog: Fix the file filters on Windows Vista+
! Ticket #3930, Fix a possible crash with embedded subtitles when the subtitle queue is disabled
! Ticket #4505, Embedded text subtitles: Fix a possible crash related to the Subresync bar
! Ticket #4504, ASS/SSA subtitles: Support floating point values in drawing commands
! Ticket #4536, ASS/SSA subtitles: Fix the parsing of \fs tags when the value was negative


1.7.6 - 05 July 2014
====================
+ ISR: Add an option to control subtitle renderer behavior regarding anamorphic video
+ ISR: Add an option to render subtitles at the source video resolution like VSFilter.
+ VSFilter: Display more informative names for external subtitles (similar to what is done with the internal subtitle renderer)
+ Add a "Copy to clipboard" feature to the "Play > Filters" menu so that the list of currently loaded filters can be copied easily
+ Add an option in the "Save Subtitle" dialog to control the export of the default style as an external ".style" file