@@ -15,6 +15,7 @@ next version - not released yet
 + Ticket #353, Allow to control minimum file duration for remember position feature
 + Ticket #1407/#2425, Add an advanced option to control the number of recent files. Those files are shown
   in the "Recent Files" menu. It is also the files for which a position is potentially saved
++ Ticket #2194, Show drive label when playing DVD
 + Ticket #3393, Allow to disable remember position feature for audio files
 + Ticket #4345, Text subtitles: Add a mode that automatically chooses the rendering target based on the
   subtitle type, ASS/SSA subtitles will be rendered on the video frame while other text subtitles will
